cmake_minimum_required(VERSION 3.20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
project(bob-ross-project)
message("C compiler in bob ross: ${CMAKE_CXX_COMPILER}")
get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
foreach(dir ${dirs})
  message(STATUS "dir='${dir}'")
endforeach()
add_subdirectory(interface)
# add_subdirectory(opengles2)
add_subdirectory(example/android)
